[package]
name = "cdf-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.1"
cognite = { git = "https://github.com/cognitedata/cognite-sdk-rust", rev = "3c1b2cbd83097193890b42f06904086d9b6343cb" }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.4"
libc = "0.2.138"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
clap = "4.0.29"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
bytes = "1.3.0"
mime_guess = "2.0.4"
thiserror = "1.0.38"
